--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/Index.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/Index.cshtml
@@ -10,6 +10,7 @@
 <div ng-app="myApp" ng-controller="DonHangPOCtrl">
     <input type="hidden" value="@Session["USERNAME"]" id="username" />
     <input type="hidden" id="isadmin" name="isadmin" value="@Session["IS_AMIN"]" />
+    <input type="hidden" id="macongty" name="macongty" value="@Session["MA_CONG_TY"]" />
     <div class="content">
         <div class="container">
             <table class="table">
