--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/ThemMoiPO.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/ThemMoiPO.cshtml
@@ -10,6 +10,7 @@
             <legend>Đơn đặt hàng</legend>
             <input type="hidden" value="@Session["USERNAME"]" id="username" />
             <input type="hidden" value="@Session["IS_AMIN"]" id="isadmin" />
+            <input type="hidden" id="macongty" name="macongty" value="@Session["MA_CONG_TY"]" />
             <center>
                 <table border="1" cellpadding="2" cellspacing="0" style="width:80%; padding:5px;">
                     <tbody>
