--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/BaoGia/BaoGiaLenPO.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/BaoGia/BaoGiaLenPO.cshtml
@@ -10,6 +10,7 @@
 <div ng-app="myApp" ng-controller="baogiaCtrl">
     <input type="hidden" value="@Session["USERNAME"]" id="username" />
     <input type="hidden" value="@Session["IS_AMIN"]" id="isadmin" />
+    <input type="hidden" id="macongty" name="macongty" value="@Session["MA_CONG_TY"]" />
     <div>
         <div class="col-md-12">
             <div class="col-md-9">
