--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/BaoGia/Details.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/BaoGia/Details.cshtml
@@ -8,6 +8,7 @@
 
 <div ng-app="myApp" ng-controller="DuyetBaoGiaCtrl">
     <input type="hidden" id="username" name="salehienthoi" value="@Session["USERNAME"]" />
+    <input type="hidden" id="macongty" name="macongty" value="@Session["MA_CONG_TY"]" />
     <!-- Dashboard content -->
     <div class="row">
         <div class="col-lg-12">
