--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/BaoGia/Index.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/BaoGia/Index.cshtml
@@ -38,6 +38,7 @@
 <div ng-app="myApp" ng-controller="baogiaCtrl">
     <input type="hidden" id="salehienthoi" name="salehienthoi" value="@Session["USERNAME"]" />
     <input type="hidden" id="isadmin" name="salehienthoi" value="@Session["IS_AMIN"]" />
+    <input type="hidden" id="macongty" name="macongty" value="@Session["MA_CONG_TY"]" />
     <!-- Dashboard content -->
     <div class="row">
         <div class="col-lg-12">
