--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/BaoGia/ThemBaoGiaMoi.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/BaoGia/ThemBaoGiaMoi.cshtml
@@ -10,6 +10,7 @@
 
             <input type="hidden" value="@Session["USERNAME"]" id="username" />
             <input type="hidden" value="@Session["IS_AMIN"]" id="isadmin" />
+            <input type="hidden" id="macongty" name="macongty" value="@Session["MA_CONG_TY"]" />
             <div class="col-md-6 boder_themmoi">
                 <div class="col-md-12 form-group">
                     <label class="col-md-2 control-label" for="name">Khách hàng :</label>
