--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/DonBanHang/Edit.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/DonBanHang/Edit.cshtml
@@ -15,7 +15,7 @@
 
 
 <input type="hidden" value="@Session["USERNAME"]" id="username" />
-
+<input type="hidden" id="macongty" name="macongty" value="@Session["MA_CONG_TY"]" />
 <div ng-app="myApp" ng-controller="BanHangCtrl">
 
     <div class="content">
