--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/DonBanHang/ListDonBanHang.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/DonBanHang/ListDonBanHang.cshtml
@@ -7,6 +7,7 @@
 <div ng-app="myApp" ng-controller="BanHangCtrl" class="content">
     <input type="hidden" value="@Session["USERNAME"]" id="username" />
     <input type="hidden" value="@Session["IS_AMIN"]" id="isadmin" />
+    <input type="hidden" id="macongty" name="macongty" value="@Session["MA_CONG_TY"]" />
     <div class="col-md-12" style="margin: 20px 0px 20px 0px">
         <i class="fa fa-check" aria-hidden="true"></i> : Đã xuất kho
         <i class="fa fa-times" aria-hidden="true"></i> : Chưa xuất kho
@@ -47,6 +48,18 @@
                     </td>
                 </tr>
             </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="8">
+                        <div class="col-md-12" id="list_ban_hang" style="text-align:center">
+                            <div>
+                                <div id="phan_trang_tong_list_ban_hang" style="width: 100%;display:inline-block; text-align:center"></div>
+                                <br />
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+            </tfoot>
         </table>
     </div>
     <div class="col-md-4">
