--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/DanhSachDuyetPO.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/DanhSachDuyetPO.cshtml
@@ -9,6 +9,7 @@
 <div class="content" ng-app="myApp" ng-controller="DonHangPOCtrl">
     <input type="hidden" value="@Session["USERNAME"]" id="username" />
     <input type="hidden" id="isadmin" name="isadmin" value="@Session["IS_AMIN"]" />
+    <input type="hidden" id="macongty" name="macongty" value="@Session["MA_CONG_TY"]" />
     <table class="table">
         <thead>
             <tr>
