--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/Details.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/Details.cshtml
@@ -13,6 +13,7 @@
 <div ng-app="myApp" ng-controller="DonHangPOCtrl">
     <input type="hidden" value="@Session["USERNAME"]" id="username" />
     <input type="hidden" value="@Session["IS_AMIN"]" id="isadmin" />
+    <input type="hidden" id="macongty" name="macongty" value="@Session["MA_CONG_TY"]" />
     <div class="content">
         <div class="col-md-12" ng-repeat="item in thongtinchung">
             <div class="col-md-12">
