--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/DonPOHome.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/DonPOHome.cshtml
@@ -6,6 +6,7 @@
 <script src="~/Content/self-writing/js/Controllers/RouteCtrl.js"></script>
 <script src="~/Content/self-writing/js/Services/DonHangPOService.js"></script>
 <script src="~/Content/self-writing/js/Controllers/DonHangPOCtrl.js"></script>
+<script src="~/Content/self-writing/pagination.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="~/Content/self-writing/css/Kinhdoanh/donhangPO.css" rel="stylesheet" />
 
