--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/Edit.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/Edit.cshtml
@@ -20,6 +20,7 @@
 <div ng-app="myApp" ng-controller="DonHangPOCtrl">
     <input type="hidden" value="@Session["USERNAME"]" id="username" />
     <input type="hidden" value="@Session["IS_AMIN"]" id="isadmin" />
+    <input type="hidden" id="macongty" name="macongty" value="@Session["MA_CONG_TY"]" />
     <fieldset>
         <legend>Sửa đơn PO</legend>
         
