--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/ListPO.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/ListPO.cshtml
@@ -7,6 +7,7 @@
 <div ng-app="myApp" ng-controller="DonHangPOCtrl" class="content">
     <input type="hidden" value="@Session["USERNAME"]" id="username" />
     <input type="hidden" value="@Session["IS_AMIN"]" id="isadmin" />
+    <input type="hidden" id="macongty" name="macongty" value="@Session["MA_CONG_TY"]" />
     <div class="col-md-12" style="margin: 10px 0px 10px 0px; color;#red;">
         Trạng thái: <i class="fa fa-check" aria-hidden="true"></i> : Đã duyệt  |  <i class="fa fa-times" aria-hidden="true"></i> : Chưa duyệt  | <i class="fa fa-spinner" aria-hidden="true"></i> : Đang chờ duyệt  |  <i class="fa fa-pencil-square-o" aria-hidden="true"></i> : Đang duyệt | <i class="fa fa-star-o" aria-hidden="true"></i> : Đã bán đủ hàng | <i class="fa fa-shopping-cart" aria-hidden="true"></i> : Đang bán dở
     </div>
@@ -70,6 +71,18 @@
                     </td>
                 </tr>
             </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="10">
+                        <div class="col-md-12" id="list_PO" style="text-align:center">
+                            <div>
+                                <div id="phan_trang_tong_list_don_hang_PO" style="width: 100%;display:inline-block; text-align:center"></div>
+                                <br />
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+            </tfoot>
         </table>
     </div>
     <div class="col-md-4">
