--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/ListPO_DangXuatDo.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/ListPO_DangXuatDo.cshtml
@@ -6,6 +6,7 @@
 <div ng-app="myApp" ng-controller="DonHangPOCtrl" class="content">
     <input type="hidden" value="@Session["USERNAME"]" id="username" />
     <input type="hidden" value="@Session["IS_AMIN"]" id="isadmin" />
+    <input type="hidden" id="macongty" name="macongty" value="@Session["MA_CONG_TY"]" />
     <div class="col-md-8">
         <table class="table">
             <thead>
