--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/Shared/_Layout.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/Shared/_Layout.cshtml
@@ -71,6 +71,7 @@
     <!-- Angular Material Library -->
     <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
     <script src="~/Content/self-writing/js/Controllers/ThongBaoKinhDoanhCtrl.js"></script>
+    <script src="~/Content/self-writing/pagination.js"></script>
     <script>
         $(function () {
             CKEDITOR.config.extraPlugins = 'justify';
