--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/BaoGia/ThemBaoGiaMoi.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/BaoGia/ThemBaoGiaMoi.cshtml
@@ -167,7 +167,7 @@
                                                                         <td>{{kh.MA_NHOM_HANG}}</td>
                                                                         <td>{{kh.XUAT_XU}}</td>
                                                                         <td>{{kh.DVT}}</td>
-                                                                        <td>{{kh.GIA_LIST_NCC1 | currency : '' : 0}}</td>
+                                                                        <td>{{kh.GIA_LIST | currency : '' : 0}}</td>
                                                                         <td>{{kh.tonHL}}</td>
                                                                         <td><i class="fa fa-check" ng-if="kh.DISCONTINUE==true"></i></td>
                                                                         <td>{{kh.MA_CHUYEN_DOI}}</td>
