--- a/ERP/ERP.Web/Areas/Marketing/Views/KyDuyetPO/ChiTietPO.cshtml
+++ b/ERP/ERP.Web/Areas/Marketing/Views/KyDuyetPO/ChiTietPO.cshtml
@@ -5,7 +5,7 @@
 }
 
 <script src="~/Content/self-writing/js/Controllers/PrintPOCtrl.js"></script>
-
+<script src="~/Content/self-writing/pagination.js"></script>
 <div ng-controller="PrintPOCtrl">
     <div id="printSectionId">
         <center>
