--- a/ERP/ERP.Web/Areas/Marketing/Views/KyDuyetPO/DetailDuyetPO.cshtml
+++ b/ERP/ERP.Web/Areas/Marketing/Views/KyDuyetPO/DetailDuyetPO.cshtml
@@ -7,12 +7,13 @@
 <script src="~/Content/self-writing/js/Services/DonHangPOService.js"></script>
 <script src="~/Content/self-writing/js/Controllers/DonHangPOCtrl.js"></script>
 
-
+<script src="~/Content/self-writing/pagination.js"></script>
 
 
 <div ng-app="myApp" ng-controller="DonHangPOCtrl">
     <input type="hidden" value="@Session["USERNAME"]" id="username" />
     <input type="hidden" value="@Session["IS_AMIN"]" id="isadmin" />
+    <input type="hidden" id="macongty" name="macongty" value="@Session["MA_CONG_TY"]" />
     <div class="content">
         <div class="col-md-12" ng-repeat="item in thongtinchung">
             <div class="col-md-12">
