--- a/ERP/ERP.Web/Areas/Marketing/Views/KyDuyetPO/KyDuyetPOHome.cshtml
+++ b/ERP/ERP.Web/Areas/Marketing/Views/KyDuyetPO/KyDuyetPOHome.cshtml
@@ -6,6 +6,7 @@
 <script src="~/Content/self-writing/js/Controllers/RouteCtrl.js"></script>
 <script src="~/Content/self-writing/js/Services/DonHangPOService.js"></script>
 <script src="~/Content/self-writing/js/Controllers/DonHangPOCtrl.js"></script>
+<script src="~/Content/self-writing/pagination.js"></script>
 <div ng-app="myApp"
      ng-controller="KyDuyetPOCtrl"
      layout="column">
