--- a/ERP/ERP.Web/Areas/Marketing/Views/KyDuyetPO/ListPOTongHop.cshtml
+++ b/ERP/ERP.Web/Areas/Marketing/Views/KyDuyetPO/ListPOTongHop.cshtml
@@ -23,6 +23,7 @@
 <div ng-app="myApp" ng-controller="DonHangPOCtrl" class="content">
     <input type="hidden" value="@Session["USERNAME"]" id="username" />
     <input type="hidden" value="@Session["IS_AMIN"]" id="isadmin" />
+    <input type="hidden" id="macongty" name="macongty" value="@Session["MA_CONG_TY"]" />
     <div class="col-md-12" style="margin: 10px 0px 10px 0px">
         <i class="fa fa-check" aria-hidden="true"></i> : Đã duyệt  |  <i class="fa fa-times" aria-hidden="true"></i> : Chưa duyệt  | <i class="fa fa-spinner" aria-hidden="true"></i> : Đang chờ duyệt  |  <i class="fa fa-pencil-square-o" aria-hidden="true"></i> : Đang duyệt
     </div>
