--- a/ERP/ERP.Web/Views/KhachHang/BaoGiaKhach.cshtml
+++ b/ERP/ERP.Web/Views/KhachHang/BaoGiaKhach.cshtml
@@ -189,7 +189,7 @@
                                                                             <td>{{kh.MA_NHOM_HANG}}</td>
                                                                             <td>{{kh.XUAT_XU}}</td>
                                                                             <td>{{kh.DVT}}</td>
-                                                                            <td>{{kh.GIA_LIST_NCC1 | currency : '' : 0}}</td>
+                                                                            <td>{{kh.GIA_LIST | number}}</td>
                                                                             <td>{{kh.tonHL}}</td>
                                                                             <td><i class="fa fa-check" ng-if="kh.DISCONTINUE==true"></i></td>
                                                                             <td>{{kh.MA_CHUYEN_DOI}}</td>
