--- a/ERP/ERP.Web/Areas/Inventory/Views/KhoXuat/HangCanXuat.cshtml
+++ b/ERP/ERP.Web/Areas/Inventory/Views/KhoXuat/HangCanXuat.cshtml
@@ -43,8 +43,8 @@
                             <td class="text-center"><input type="checkbox"  ng-click="chuyenmakho('IVHOPLONG01')" />{{item.TON_TANG_2}}</td>
                             <td class="text-center"><input type="checkbox" ng-click="chuyenmakho('IVHOPLONG02')"/> {{item.TON_TANG_3}}</td>
                             <td class="text-center"><input type="checkbox" ng-click="chuyenmakho('IVHOPLONG03')"/> {{item.TON_TANG_4}}</td>
-                            <td><input type="button" value="Giữ hàng" class="btn-primary" ng-click="GiuHang(item.ID_DON_CHI_TIET,item.MA_HANG,item.DVT,item.SO_LUONG)" /></td>
-                            <td><input type="button" value="Đặt Hàng" class="btn-primary" ng-click="candathang(item.ID_DON_CHI_TIET)"/></td>
+                            <td><input type="button" value="Giữ hàng" class="btn-primary" ng-click="GiuHang(item.ID_DON_CHI_TIET,item.MA_HANG,item.DVT,item.SO_LUONG)" ng-if="item.SO_LUONG < (item.TON_TANG_2 + item.TON_TANG_3 + item.TON_TANG_4) || (item.TON_TANG_2 + item.TON_TANG_3 + item.TON_TANG_4) > 0 " /></td>
+                            <td><input type="button" value="Đặt Hàng" class="btn-primary" ng-click="candathang(item.ID_DON_CHI_TIET);AddToKhoDat(item)" ng-if="item.SO_LUONG > (item.TON_TANG_2 + item.TON_TANG_3 + item.TON_TANG_4) || (item.TON_TANG_2 + item.TON_TANG_3 + item.TON_TANG_4) < 0" /></td>
 
                         </tr>
                         <!--Detail row-->
