--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/POLenBanHang.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/POLenBanHang.cshtml
@@ -24,7 +24,7 @@
     <input type="hidden" id="macongty" name="macongty" value="@Session["MA_CONG_TY"]" />
     <fieldset>
         <legend>Sửa đơn PO</legend>
-
+    </fieldset>
         <div class="content">
             <div class="col-md-12" ng-repeat="item in thongtinchung">
                 <div class="col-md-12">
