--- a/ERP/ERP.Web/Areas/Accounting/Views/Shared/_Layout.cshtml
+++ b/ERP/ERP.Web/Areas/Accounting/Views/Shared/_Layout.cshtml
@@ -378,7 +378,7 @@
         }
 
         body button {
-            background: #00BFFF !important;
+            background: #1191BF !important;
             color: white !important;
             border: none !important;
             border: 1px solid #00BFFF !important;
