--- a/ERP/ERP.Web/Areas/Marketing/Views/MKGiaoViec/Index.cshtml
+++ b/ERP/ERP.Web/Areas/Marketing/Views/MKGiaoViec/Index.cshtml
@@ -1,7 +1,38 @@
 ﻿
 <script src="~/Content/self-writing/js/Controllers/MKGiaoViecCtrl.js"></script>
 
+<style>
+    /* Let's get this party started */
+    ::-webkit-scrollbar {
+        width: 5px;
+    }
 
+    /* Track */
+    ::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+        -webkit-border-radius: 10px;
+        border-radius: 10px;
+    }
+
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+        -webkit-border-radius: 10px;
+        border-radius: 10px;
+        background: #00BFFF;
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+    }
+
+        ::-webkit-scrollbar-thumb:window-inactive {
+            background: #00BFFF;
+        }
+        
+        
+         .option:hover{
+            background-color: #00A2D8;
+            color: #fff;
+            font-weight: bold;
+        }
+</style>
 <style>
     blockquote{
     border-left:none
@@ -40,14 +71,25 @@
     font-size: 19px;
     margin-top: -65px;
 }
-
+.option_box{
+    background-color: #1191BF;
+    font-weight: bold;
+    color: #fff;
+    height: 30px;
+}
+.col-md-4{
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+}
 </style>
 <div ng-controller="MKGiaoViecCtrl" ng-app="myApp">
     <input type="hidden" value="@Session["USERNAME"]" id="username"/>
     <input type="hidden" value="@Session["IS_AMIN"]" id="isadmin" />
-    <div class="col-md-4">
+    <div class="col-md-4" style="margin-top: 25px;">
+
         <select size="10" name="decision2" style="height: 500px;" class="col-md-12">
-            <option ng-repeat="item in list_nhanvienHL" style="height:30px;margin-left: 15px;margin-bottom: 15px;vertical-align:middle;padding-top: 5px;" ng-click="transfer(item)">{{item.HO_VA_TEN}}</option>
+            <option class="option_box">Danh sách nhân viên</option>
+            <option ng-repeat="item in list_nhanvienHL" class="option" style="height:30px;margin-left: 15px;margin-bottom: 15px;vertical-align:middle;padding-top: 5px;" ng-click="transfer(item)">{{item.HO_VA_TEN}}</option>
         </select>
 
         <button type="button" ng-click="giaoviec()" class="btn btn-default" style="margin-top: 20px;">Giao việc</button>
