--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/DonPOHome.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/DonPOHome.cshtml
@@ -45,7 +45,10 @@
     <md-tabs md-stretch-tabs
              md-selected="selectedIndex">
         <md-tab label="List đơn PO"></md-tab>
-        <md-tab label="Thêm mới PO"></md-tab>        
+        <md-tab label="Thêm mới PO"></md-tab>      
+        <md-tab label="List đơn PO đã giữ đầy đủ"></md-tab>
+        <md-tab label="List đơn PO đang giữ dở"></md-tab>
+        <md-tab label="List đơn PO đã duyệt"></md-tab>  
         <md-tab label="List đơn PO đã hủy"></md-tab>
         <md-tab label="List đơn PO đang chờ duyệt"></md-tab>
         <md-tab label="List đơn PO đang duyệt"></md-tab>
